chore(app): default angular app cleanup

--- a/get-things-done/angular.json
+++ b/get-things-done/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "get-things-done"
+    }
+  },
+  "defaultProject": "get-things-done",
+  "cli": {
+    "analytics": false
+  }
 }
